syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
package org.example.orderservice;
import "ProductService.proto";
import "CartService.proto";
import "UserService.proto";

enum StateOrder {
    WAITING_FOR_PAYMENT = 0;
    PAYED = 1;
    IN_DELIVERY = 2;
    DELIVERED = 3;
}
message OrderRequest {
  int64 userId = 1;
  int64 cartId = 2;
  google.protobuf.Timestamp createdAt = 3;
  StateOrder state = 4;
}
message OrderResponse {
  int64 orderId = 1;
  userservice.UserResponse user = 2;
  cartservice.CartResponse cart = 3;
  google.protobuf.Timestamp createdAt = 4;
}
message OrderId {
  int64 orderId = 1;
}
message OrderRequestWithId {
  int64 orderId = 1;
  OrderRequest orderRequest = 2;
}
message StateOrderWithOrderId {
  int64 orderId = 1;
  StateOrder state = 2;
}
service OrderController {
  rpc updateOrder(OrderRequestWithId) returns (OrderResponse);
  rpc createOrder(OrderRequest) returns (OrderResponse);
  rpc getOrder(OrderId) returns (OrderResponse);
  rpc deleteOrder(OrderId) returns (google.protobuf.Empty);
  rpc changeOrderState(StateOrderWithOrderId) returns (OrderResponse);
}